# supermem

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  WARP.md  chat_cli.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent/: __init__.py  agent.py  model.py  pyproject.toml  schemas.py  settings.py  tools.py  utils.py
examples/: mem_agent_cli.py
mcp_server/: http_server.py  mcp_http_server.py  mcp_sse_server.py  pyproject.toml  server.py  settings.py
mcp_server/scripts/: filters.py  memory_setup.py  memory_setup_cli.py  setup_scripts_and_json.py
memory_connectors/: __init__.py  base.py  memory_connect.py  memory_wizard.py
memory_connectors/chatgpt_history/: __init__.py  connector.py  converter.py  embedding_connector.py  parser.py  types.py
memory_connectors/github_live/: __init__.py  connector.py
memory_connectors/google_docs_live/: __init__.py  connector.py
memory_connectors/notion/: __init__.py  connector.py  parser.py  types.py
memory_connectors/nuclino/: __init__.py  connector.py  parser.py  types.py
recall/: __init__.py  __main__.py  config.py  errors.py  logging.py  pyproject.toml
recall/capture/: __init__.py  compressor.py  observation.py  session.py  timeline.py
recall/core/: __init__.py  connector.py  model_client.py  retriever.py  storage.py
recall/indexer/: __init__.py  vault.py
recall/model/: __init__.py  base.py
recall/privacy/: __init__.py  filter.py
recall/retrieval/: __init__.py  agent.py  fts.py  graph.py  hybrid.py  vector.py
recall/storage/: __init__.py  database.py  graph.py  vector.py
supermem/: __init__.py  __main__.py  config.py  errors.py  logging.py  pyproject.toml
supermem/capture/: __init__.py  compressor.py  observation.py  session.py  timeline.py
supermem/core/: __init__.py  connector.py  model_client.py  retriever.py  storage.py
supermem/hooks/: __init__.py  inject.py  learn.py
supermem/indexer/: __init__.py  vault.py
supermem/model/: __init__.py  base.py
supermem/privacy/: __init__.py  filter.py
supermem/retrieval/: __init__.py  agent.py  fts.py  graph.py  hybrid.py  vector.py
supermem/storage/: __init__.py  database.py  graph.py  vector.py
tests/: conftest.py  test_agent.py  test_engine.py  test_tools.py
tests/integration/: test_full_query.py
tests/unit/: test_agent_retriever.py  test_cli.py  test_compressor.py  test_database.py  test_graph.py  test_hybrid.py  test_mcp_server.py  test_model_clients.py  test_observation.py  test_privacy.py  test_session.py  test_vault_indexer.py
worker/: __init__.py  app.py
worker/static/: index.html
