[project]
name = "recall"
version = "0.1.0"
description = "Persistent AI memory without RAG — agent-navigated local knowledge base via MCP"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "agent",
    "mcp-server",
    "rich>=13.7.0",
]

[tool.uv.workspace]
members = ["agent", "mcp_server"]

[tool.uv.sources]
agent = { workspace = true }
"mcp-server" = { workspace = true }


