[project]
name = "supermem"
version = "0.2.0"
description = "Persistent AI memory without RAG — agent-navigated local knowledge base via MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent",
    "aiosqlite>=0.22.1",
    "kuzu>=0.11.3",
    "mcp-server",
    "supermem-core",
    "rich>=13.7.0",
    "tenacity>=9.1.4",
    "watchdog>=6.0.0",
]

[tool.uv.workspace]
members = ["agent", "mcp_server", "supermem"]

[tool.uv.sources]
agent = { workspace = true }
"mcp-server" = { workspace = true }
supermem-core = { workspace = true }

[project.scripts]
supermem = "supermem.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["supermem", "agent", "mcp_server", "memory_connectors"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]


