[project]
name = "agent"
version = "0.1.0"
description = "Agent module for mem-agent-mcp project"
requires-python = ">=3.11,<3.12"
dependencies = [
    "openai",
    "pydantic>=2.0.0",
    "python-dotenv",
    "aiofiles",
    "jinja2",
    "black",
    "huggingface-hub>=0.34.3",
    "transformers>4.51.0,<4.54.0",
    "vllm>=0.5.5; sys_platform != 'darwin'",
    "setuptools"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "tools", "model", "engine", "schemas", "utils", "settings"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]